--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,7 +1,7 @@
 # config/config.yaml
 api:
   instance_token: "your_instance_api_token"
-  livefeeds_token: "your_mastodon_api_token"
+  livefeeds_token: "56TDjS3vpVrHpkLz76VjNGh71942TpfSG2v0T3mssoQ "
   email: "your_email@example.com"
 
 paths:
@@ -10,5 +10,3 @@ paths:
 logging:
   level: "INFO"
   file: "logs/app.log"
-
-token:
